[package]
name = "chippy-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-miniquad = "0.12"
egui = "0.19"
miniquad = "0.3.13"
# egui_demo_lib = "0.19.0"
chippy-core = { path = "../chippy-core" }
rfd = "0.10.0"
